# supply-chain-openenv-final

./: DEPLOYMENT.md  Dockerfile  MANIFEST.in  README.md  SUBMISSION_CHECKLIST.md  app.py  inference.py  openenv.yaml  pyproject.toml
server/: app.py
src/supply_chain_env/: __init__.py  run.py
src/supply_chain_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
supply_chain_env/: __init__.py
