[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-env"
version = "0.1.0"
description = "OpenEnv environment for supply chain inventory management"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Aashutosh Rana"}]
dependencies = [
    "openenv-core>=0.2.0",
    "openenv>=0.2.0",
    "numpy",
    "pydantic",
    "typing-extensions",
    "fastapi",
    "uvicorn",
    "pyyaml",
]

[project.scripts]
inference = "supply_chain_env.run:main"
server = "server.app:main"

[tool.setuptools]
packages = ["supply_chain_env", "server"]
package-dir = { "supply_chain_env" = "src/supply_chain_env", "server" = "server" }
py-modules = ["app", "inference"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".pytest_cache", "__pycache__", "pytest-cache-files-*"]
